XMLtoCSV/objects/unpackaged/objects/Business_Event_vod__c.object
<CustomObject>
    <description>Top level object that holds various regulation events.</description>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active flag for each regulation</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Parameter_vod__c</fullName>
        <description>This is parameter for calculating the due date of EPPV or PI distribution, defines the date range for recording the activity</description>
        <label>Date Parameter</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Description for the regulation</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>End date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Date_vod__c</fullName>
        <description>Issue date</description>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Pages_vod__c</fullName>
        <description>Each PI&apos;s (brochure) number of pages</description>
        <label>Number of Pages</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Launch_Date_vod__c</fullName>
        <description>Date of the Product Launch used in EPPV</description>
        <label>Product Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product associated to the Regulations</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Business Events</relationshipLabel>
        <relationshipName>Business_Events_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Business Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Events</pluralLabel>
    <recordTypes>
        <fullName>EPPV_vod</fullName>
        <active>true</active>
        <description>EPPV</description>
        <label>EPPV</label>
    </recordTypes>
    <recordTypes>
        <fullName>PI_vod</fullName>
        <active>true</active>
        <description>PI</description>
        <label>PI</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>